Add custom colors to Tailwind config.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Vite App</title>
 </head>
 
-<body class="bg-purple-400 min-h-screen">
+<body class="bg-light-blue-400 min-h-screen">
 	<h2 class="text-9xl">Bonjour! 🇫🇷</h2>
 	<script type="module" src="/main.js"></script>
 </body>
