Update home page for deploy.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>Vite App</title>
 </head>
 
-<body class="bg-light-blue-400 min-h-screen">
-	<h2 class="text-9xl">Bonjour! 🇫🇷</h2>
+<body class="min-h-screen flex items-center justify-center text-6xl bg-teal-400 text-teal-100">
+	<h2>Bonjour! 🇫🇷</h2>
 	<script type="module" src="/main.js"></script>
 </body>
 
