--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Vite App</title>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="favicon.svg" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Vite App</title>
-</head>
+	<body class="min-h-screen flex items-center justify-center text-6xl bg-teal-400 text-teal-100">
+		<h2>Bonjour! 🇫🇷</h2>
+		<h3 class="text-xl">Le cafe? Zeet, zeet?</h3>
 
-<body class="min-h-screen flex items-center justify-center text-6xl bg-teal-400 text-teal-100">
-	<h2>Bonjour! 🇫🇷</h2>
-	<script type="module" src="/main.js"></script>
-</body>
+		<!-- ========================= -->
+		<!-- header/navigation section -->
+		<!-- ========================= -->
 
+		<!-- ========================= -->
+		<!-- hero section -->
+		<!-- ========================= -->
+
+		<!-- ========================= -->
+		<!-- overview section -->
+		<!-- ========================= -->
+
+		<!-- ========================= -->
+		<!-- about section -->
+		<!-- ========================= -->
+
+		<!-- ========================= -->
+		<!-- what you'll learn section -->
+		<!-- ========================= -->
+
+		<!-- ========================= -->
+		<!-- what you'll build section -->
+		<!-- ========================= -->
+
+		<!-- ========================= -->
+		<!-- faq section -->
+		<!-- ========================= -->
+
+		<!-- ========================= -->
+		<!-- footer/newsletter section -->
+		<!-- ========================= -->
+
+		<script type="module" src="/main.js"></script>
+	</body>
 </html>
