--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Vite App</title>
 	</head>
 
-	<body class="min-h-screen flex items-center justify-center text-6xl bg-teal-400 text-teal-100">
+	<body>
 		<h2>Bonjour! 🇫🇷</h2>
 
 		<!-- ========================= -->
