Add header nav and styles

--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
 		<title>Vite App</title>
 	</head>
 
-	<body class="min-h-screen flex items-center justify-center text-6xl bg-teal-400 text-teal-100">
-		<h2>Bonjour! 🇫🇷</h2>
-
+	<body>
 		<!-- ========================= -->
 		<!-- header/navigation section -->
 		<!-- ========================= -->
+		<div class="text-gray-600">
+			<div class="container mx-auto flex justify-between px-6 lg:px-0 py-6">				
+				<!-- left header section -->
+				<div class="flex items-center space-x-4">
+					<a href="#" class="font-bold text-2xl text-teal-900">Beginner Tailwind</a>
+					<a href="#" class="hover:text-gray-900">About</a>
+					<a href="#" class="hover:text-gray-900">What You'll Learn</a>
+					<a href="#" class="hover:text-gray-900">FAQ</a>
+					<a href="#" class="hover:text-gray-900">Pricing</a>
+				</div>
+				<!-- right header section -->
+				<div class="space-x-4">
+					<a href="#" class="hover:text-gray-900">Login</a>
+					<a href="#" class="inline-block p-3 bg-purple-300 hover:bg-purple-200 text-purple-700 hover:text-purple-600 rounded shadow hover:shadow-xl transition duration-500">Get The Course</a>
+				</div>
+			</div>
+		</div>
 
 		<!-- ========================= -->
 		<!-- hero section -->
