Add hero section layout / markup

--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
 		<!-- ========================= -->
 		<!-- hero section -->
 		<!-- ========================= -->
+		<div>
+			<div class="container mx-auto px-6 lg:px-0 py-24 text-center">
+				<!-- heading -->
+				<h1 class="mb-4">Beginner Tailwind</h1>
+
+				<!-- paragraph -->
+				<p class="mb-8">Make good looking designs quickly. All without a single line of custom CSS.</p>
+
+				<!-- big button / cta -->
+				<a href="#" class="inline-block mb-32">Get the course</a>
+
+				<div class="relative">
+					<!-- teaser image -->
+					<img src="https://i.imgur.com/wysbBMS.png" alt="Teaser image">
+
+					<!-- teaser image info box -->
+					<div class="absolute top-0 right-0 bg-yellow-100 transform translate-x-4 -translate-y-4">
+						<p>We'll create beginnertailwind.com (it's the site you're on now).</p>
+						<p>And we'll do it all without a single line of custom CSS.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- ========================= -->
 		<!-- overview section -->
