--- a/index.html
+++ b/index.html
@@ -8,53 +8,71 @@
 	</head>
 
 	<body>
-		<!-- ========================= -->
-		<!-- header/navigation section -->
-		<!-- ========================= -->
-		<div class="text-gray-600">
-			<div class="container mx-auto flex justify-between px-6 lg:px-0 py-6">				
-				<!-- left header section -->
-				<div class="flex items-center space-x-4">
-					<a href="#" class="font-bold text-2xl text-teal-900">Beginner Tailwind</a>
-					<a href="#" class="hidden lg:inline-block hover:text-gray-900">About</a>
-					<a href="#" class="hidden lg:inline-block hover:text-gray-900">What You'll Learn</a>
-					<a href="#" class="hidden lg:inline-block hover:text-gray-900">FAQ</a>
-					<a href="#" class="hidden lg:inline-block hover:text-gray-900">Pricing</a>
-				</div>
-				<!-- right header section -->
-				<div class="flex items-center space-x-4">
-					<a href="#" class="hover:text-gray-900">Login</a>
-					<a href="#" class="hidden lg:inline-block p-3 bg-purple-300 hover:bg-purple-200 text-purple-700 hover:text-purple-600 rounded shadow hover:shadow-xl transition duration-500">Get The Course</a>
+		<!-- header + hero bg wrapper -->
+		<div class="bg-gradient-to-br from-white to-gray-300">
+
+			<!-- left circle decoration -->
+			<div class="absolute top-0 left-0">
+				<div class="absolute bg-gradient-to-br from-teal-100 to-teal-200 w-64 h-64 rounded-full opacity-50"></div>
+				<div class="absolute ml-10 mt-10 bg-gradient-to-br from-purple-100 to-purple-200 w-64 h-64 rounded-full opacity-50"></div>
+				<div class="absolute ml-24 bg-gradient-to-br from-red-100 to-red-200 w-64 h-64 rounded-full opacity-50"></div>
+			</div>
+
+			<!-- right circle decoration -->
+			<div class="absolute top-0 right-0 mr-48 transform -translate-x-64 translate-y-64">
+				<div class="absolute bg-gradient-to-br from-teal-100 to-teal-200 w-64 h-64 rounded-full opacity-50"></div>
+				<div class="absolute ml-10 mt-10 bg-gradient-to-br from-purple-100 to-purple-200 w-64 h-64 rounded-full opacity-50"></div>
+				<div class="absolute ml-24 bg-gradient-to-br from-red-100 to-red-200 w-64 h-64 rounded-full opacity-50"></div>
+			</div>
+
+			<!-- ========================= -->
+			<!-- header/navigation section -->
+			<!-- ========================= -->
+			<div class="relative text-gray-600">
+				<div class="container mx-auto flex justify-between px-6 lg:px-0 py-6">				
+					<!-- left header section -->
+					<div class="flex items-center space-x-4">
+						<a href="#" class="font-bold text-2xl text-teal-900">Beginner Tailwind</a>
+						<a href="#" class="hidden lg:inline-block hover:text-gray-900">About</a>
+						<a href="#" class="hidden lg:inline-block hover:text-gray-900">What You'll Learn</a>
+						<a href="#" class="hidden lg:inline-block hover:text-gray-900">FAQ</a>
+						<a href="#" class="hidden lg:inline-block hover:text-gray-900">Pricing</a>
+					</div>
+					<!-- right header section -->
+					<div class="flex items-center space-x-4">
+						<a href="#" class="hover:text-gray-900">Login</a>
+						<a href="#" class="hidden lg:inline-block p-3 bg-purple-300 hover:bg-purple-200 text-purple-700 hover:text-purple-600 rounded shadow hover:shadow-xl transition duration-500">Get The Course</a>
+					</div>
 				</div>
 			</div>
-		</div>
-
-		<!-- ========================= -->
-		<!-- hero section -->
-		<!-- ========================= -->
-		<div>
-			<div class="container mx-auto px-6 lg:px-0 py-24 text-center">
-				<!-- heading -->
-				<h1 class="mb-4 text-6xl font-extrabold">
-					<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-teal-500">Beginner</span>
-					<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-500 via-purple-600 to-purple-500">Tailwind</span>
-				</h1>
-
-
-				<!-- paragraph -->
-				<p class="mb-8 text-2xl text-gray-700">Make good looking designs quickly. All without a single line of custom CSS.</p>
-
-				<!-- big button / cta -->
-				<a href="#" class="inline-block mb-32 py-3 px-12 rounded shadow-lg hover:shadow-2xl bg-gradient-to-br from-purple-500 to-purple-700 hover:to-purple-600 text-purple-100 hover:text-white font-bold text-lg tracking-wide transition duration-500">Get the course</a>
-
-				<div class="relative">
-					<!-- teaser image -->
-					<img src="https://i.imgur.com/wysbBMS.png" alt="Teaser image" class="rounded-lg shadow-2xl border-4 border-purple-400" />
-
-					<!-- teaser image info box -->
-					<div class="absolute top-0 right-0 bg-yellow-100 transform translate-x-4 -translate-y-4 text-left py-4 px-8 rounded shadow-lg text-yellow-800 border-t-4 border-yellow-500">
-						<p><strong class="font-bold">We'll create BeginnerTailwind.com</strong> <span class="opacity-50">(it's the site you're on now)</span></p>
-						<p>And we'll do it all without a single line of custom CSS!</p>
+	
+			<!-- ========================= -->
+			<!-- hero section -->
+			<!-- ========================= -->
+			<div class="relative">
+				<div class="container mx-auto px-6 lg:px-0 py-24 text-center">
+					<!-- heading -->
+					<h1 class="mb-4 text-6xl font-extrabold">
+						<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-teal-500">Beginner</span>
+						<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-500 via-purple-600 to-purple-500">Tailwind</span>
+					</h1>
+	
+	
+					<!-- paragraph -->
+					<p class="mb-8 text-2xl text-gray-700">Make good looking designs quickly. All without a single line of custom CSS.</p>
+	
+					<!-- big button / cta -->
+					<a href="#" class="inline-block mb-32 py-3 px-12 rounded shadow-lg hover:shadow-2xl bg-gradient-to-br from-purple-500 to-purple-700 hover:to-purple-600 text-purple-100 hover:text-white font-bold text-lg tracking-wide transition duration-500">Get the course</a>
+	
+					<div class="relative">
+						<!-- teaser image -->
+						<img src="https://i.imgur.com/wysbBMS.png" alt="Teaser image" class="rounded-lg shadow-2xl border-4 border-purple-400" />
+	
+						<!-- teaser image info box -->
+						<div class="absolute top-0 right-0 bg-yellow-100 transform translate-x-4 -translate-y-4 text-left py-4 px-8 rounded shadow-lg text-yellow-800 border-t-4 border-yellow-500">
+							<p><strong class="font-bold">We'll create BeginnerTailwind.com</strong> <span class="opacity-50">(it's the site you're on now)</span></p>
+							<p>And we'll do it all without a single line of custom CSS!</p>
+						</div>
 					</div>
 				</div>
 			</div>
