Add responsive styles to hero.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<div class="bg-gradient-to-br from-white to-gray-300">
 
 			<!-- left circle decoration -->
-			<div class="absolute top-0 left-0">
+			<div class="absolute top-0 left-0 transform translate-x-4 -translate-y-4">
 				<div class="absolute bg-gradient-to-br from-teal-100 to-teal-200 w-64 h-64 rounded-full opacity-50"></div>
 				<div class="absolute ml-10 mt-10 bg-gradient-to-br from-purple-100 to-purple-200 w-64 h-64 rounded-full opacity-50"></div>
 				<div class="absolute ml-24 bg-gradient-to-br from-red-100 to-red-200 w-64 h-64 rounded-full opacity-50"></div>
 			</div>
 
 			<!-- right circle decoration -->
-			<div class="absolute top-0 right-0 mr-48 transform -translate-x-64 translate-y-64">
+			<div class="hidden lg:block absolute top-0 right-0 mr-48 transform -translate-x-64 translate-y-64">
 				<div class="absolute bg-gradient-to-br from-teal-100 to-teal-200 w-64 h-64 rounded-full opacity-50"></div>
 				<div class="absolute ml-10 mt-10 bg-gradient-to-br from-purple-100 to-purple-200 w-64 h-64 rounded-full opacity-50"></div>
 				<div class="absolute ml-24 bg-gradient-to-br from-red-100 to-red-200 w-64 h-64 rounded-full opacity-50"></div>
@@ -52,24 +52,24 @@
 			<div class="relative">
 				<div class="container mx-auto px-6 lg:px-0 py-24 text-center">
 					<!-- heading -->
-					<h1 class="mb-4 text-6xl font-extrabold">
+					<h1 class="mb-4 text-5xl lg:text-6xl font-extrabold">
 						<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-teal-500">Beginner</span>
 						<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-500 via-purple-600 to-purple-500">Tailwind</span>
 					</h1>
 	
 	
 					<!-- paragraph -->
-					<p class="mb-8 text-2xl text-gray-700">Make good looking designs quickly. All without a single line of custom CSS.</p>
+					<p class="mb-8 text-lg lg:text-2xl text-gray-700">Make good looking designs quickly. All without a single line of custom CSS.</p>
 	
 					<!-- big button / cta -->
-					<a href="#" class="inline-block mb-32 py-3 px-12 rounded shadow-lg hover:shadow-2xl bg-gradient-to-br from-purple-500 to-purple-700 hover:to-purple-600 text-purple-100 hover:text-white font-bold text-lg tracking-wide transition duration-500">Get the course</a>
+					<a href="#" class="inline-block mb-16 lg:mb-32 py-3 px-12 rounded shadow-lg hover:shadow-2xl bg-gradient-to-br from-purple-500 to-purple-700 hover:to-purple-600 text-purple-100 hover:text-white font-bold text-lg tracking-wide transition duration-500">Get the course</a>
 	
 					<div class="relative">
 						<!-- teaser image -->
 						<img src="https://i.imgur.com/wysbBMS.png" alt="Teaser image" class="rounded-lg shadow-2xl border-4 border-purple-400" />
 	
 						<!-- teaser image info box -->
-						<div class="absolute top-0 right-0 bg-yellow-100 transform translate-x-4 -translate-y-4 text-left py-4 px-8 rounded shadow-lg text-yellow-800 border-t-4 border-yellow-500">
+						<div class="lg:absolute top-0 right-0 bg-yellow-100 lg:transform translate-x-4 -translate-y-4 text-left py-4 px-8 rounded shadow-lg text-yellow-800 border-t-4 border-yellow-500">
 							<p><strong class="font-bold">We'll create BeginnerTailwind.com</strong> <span class="opacity-50">(it's the site you're on now)</span></p>
 							<p>And we'll do it all without a single line of custom CSS!</p>
 						</div>
