Quickfix: Set translate styles on lg mq.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<img src="https://i.imgur.com/wysbBMS.png" alt="Teaser image" class="rounded-lg shadow-2xl border-4 border-purple-400" />
 	
 						<!-- teaser image info box -->
-						<div class="lg:absolute top-0 right-0 bg-yellow-100 lg:transform translate-x-4 -translate-y-4 text-left py-4 px-8 rounded shadow-lg text-yellow-800 border-t-4 border-yellow-500">
+						<div class="lg:absolute top-0 right-0 bg-yellow-100 lg:transform lg:translate-x-4 lg:-translate-y-4 text-left py-4 px-8 rounded shadow-lg text-yellow-800 border-t-4 border-yellow-500">
 							<p><strong class="font-bold">We'll create BeginnerTailwind.com</strong> <span class="opacity-50">(it's the site you're on now)</span></p>
 							<p>And we'll do it all without a single line of custom CSS!</p>
 						</div>
