Add overview section markup.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,30 @@
 		<!-- ========================= -->
 		<!-- overview section -->
 		<!-- ========================= -->
+		<div class="bg-purple-600">
+			<div class="container mx-auto px-6 lg:px-0 py-24">
+				<h2>Writing CSS is tough stuff!</h2>
+				<div class="flex space-x-16">
+					<!-- left col -->
+					<div class="w-2/3">
+						<p>Tailwind makes writing CSS easier and lets us customize our designs faster than any other CSS framework. If you want a CSS framework that has pre-built components, then Tailwind may not be for you. If you want a CSS framework that lets you design quickly and customize your site, then Tailwind is gonna be a lot of fun.</p>
+						<p>After using Bulma to build Scotch.io, my CSS files became littered with my own!importantclasses to override the framework's styles. Tailwind doesn't have the !importantproblem since all our elements are designed on the fly.</p>
+						<p>Important Note: Tailwind lets us design quickly, but this doesn't mean that you don't need CSS knowledge however. To use Tailwind, you need to have a good understanding of CSS properties. In this course, we will learn Tailwind and we'll also learn CSS conceptsto create good looking designs. Tailwind is the ultimate CSS shorthand, but we still need to learn the CSS, which we'll do in this course.</p>
+						<p>This isn't just a Tailwind course. This is also a "learn how to design with CSS" course.</p>
+						<p>The hardest things about learning Tailwind is memorizing the classes and also knowing which classes go well together. We'll be writing a lot of Tailwind in this course so that the repetition will help us commit Tailwind classes to memory.</p>
+					</div>
+
+					<!-- right col -->
+					<div class="flex-grow">
+						<div>What classes should I use?</div>
+						<div>How do I make things look good?</div>
+						<div>My design looks basic?</div>
+						<div>How do I do responsive?</div>
+						<div>Why does my typography look so bad?</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- ========================= -->
 		<!-- about section -->
