Add overview section styling.

--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
 		<!-- ========================= -->
 		<div class="bg-purple-600">
 			<div class="container mx-auto px-6 lg:px-0 py-24">
-				<h2>Writing CSS is tough stuff!</h2>
+				<h2 class="mb-10 text-6xl font-bold text-purple-100">Writing CSS is tough stuff!</h2>
 				<div class="flex space-x-16">
 					<!-- left col -->
-					<div class="w-2/3">
-						<p>Tailwind makes writing CSS easier and lets us customize our designs faster than any other CSS framework. If you want a CSS framework that has pre-built components, then Tailwind may not be for you. If you want a CSS framework that lets you design quickly and customize your site, then Tailwind is gonna be a lot of fun.</p>
-						<p>After using Bulma to build Scotch.io, my CSS files became littered with my own!importantclasses to override the framework's styles. Tailwind doesn't have the !importantproblem since all our elements are designed on the fly.</p>
-						<p>Important Note: Tailwind lets us design quickly, but this doesn't mean that you don't need CSS knowledge however. To use Tailwind, you need to have a good understanding of CSS properties. In this course, we will learn Tailwind and we'll also learn CSS conceptsto create good looking designs. Tailwind is the ultimate CSS shorthand, but we still need to learn the CSS, which we'll do in this course.</p>
-						<p>This isn't just a Tailwind course. This is also a "learn how to design with CSS" course.</p>
+					<div class="w-2/3 bg-white p-16 rounded shadow-2xl text-gray-800 text-lg space-y-8 leading-relaxed">
+						<p>Tailwind makes writing CSS easier and lets us customize our designs faster than any other CSS framework. If you want a CSS framework that has pre-built components, then Tailwind may not be for you. If you want a CSS framework that lets you design quickly and customize your site, then <strong class="font-bold text-teal-500">Tailwind is gonna be a lot of fun</strong>.</p>
+						<p>After using Bulma to build <a href="https://scotch.io" class="text-blue-500 hover:underline">Scotch.io</a>, my CSS files became littered with my own <code class="inline-block px-1 rounded bg-gray-200 text-red-700 text-xs font-mono">!important</code> classes to override the framework's styles. Tailwind doesn't have the <code class="inline-block px-1 rounded bg-gray-200 text-red-700 text-xs font-mono">!important</code> problem since all our elements are designed on the fly.</p>
+						<p><strong class="font-bold">Important Note:</strong> Tailwind lets us design quickly, but this doesn't mean that you don't need CSS knowledge however. To use Tailwind, you need to have a good understanding of CSS properties. In this course, we will learn Tailwind and we'll also learn CSS conceptsto create good looking designs. <strong class="font-bold">Tailwind is the ultimate CSS shorthand</strong>, but we still need to learn the CSS, which we'll do in this course.</p>
+						<p class="relative text-3xl italic"><span class="absolute top-0 left-0 transform -translate-x-6 -translate-y-6 scale-150 text-purple-600 text-6xl opacity-50">"</span>This isn't just a Tailwind course. This is also a "learn how to design with CSS" course.</p>
 						<p>The hardest things about learning Tailwind is memorizing the classes and also knowing which classes go well together. We'll be writing a lot of Tailwind in this course so that the repetition will help us commit Tailwind classes to memory.</p>
 					</div>
 
 					<!-- right col -->
-					<div class="flex-grow">
-						<div>What classes should I use?</div>
-						<div>How do I make things look good?</div>
-						<div>My design looks basic?</div>
-						<div>How do I do responsive?</div>
-						<div>Why does my typography look so bad?</div>
+					<div class="flex-grow space-y-4 text-lg italic">
+						<div class="p-10 rounded-lg bg-purple-800 text-purple-200">What classes should I use?</div>
+						<div class="p-10 rounded-lg bg-purple-800 text-purple-200">How do I make things look good?</div>
+						<div class="p-10 rounded-lg bg-purple-800 text-purple-200">My design looks basic?</div>
+						<div class="p-10 rounded-lg bg-purple-800 text-purple-200">How do I do responsive?</div>
+						<div class="p-10 rounded-lg bg-purple-800 text-purple-200">Why does my typography look so bad?</div>
 					</div>
 				</div>
 			</div>
