--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 			<!-- hero section -->
 			<!-- ========================= -->
 			<div class="relative">
+
+				<!-- purple bar to spice up the section transition -->
+				<div class="absolute bottom-0 inset-x-0 h-64 bg-purple-700"></div>
+
 				<div class="container mx-auto px-6 lg:px-0 py-24 text-center">
 					<!-- heading -->
 					<h1 class="mb-4 text-5xl lg:text-6xl font-extrabold">
@@ -81,8 +85,12 @@
 		<!-- ========================= -->
 		<!-- overview section -->
 		<!-- ========================= -->
-		<div class="bg-purple-600">
-			<div class="container mx-auto px-6 lg:px-0 py-24">
+		<div class="relative bg-purple-700 pt-12 pb-24">
+
+			<!-- gray bar to spice up the section transition -->
+			<div class="absolute bottom-0 inset-x-0 h-64 bg-gray-300"></div>
+
+			<div class="relative container mx-auto px-6 lg:px-0">
 				<h2 class="mb-10 text-6xl font-bold text-purple-100">Writing CSS is tough stuff!</h2>
 				<div class="flex space-x-16">
 					<!-- left col -->
