Add overview section responsive styles.

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 		<!-- ========================= -->
 		<!-- overview section -->
 		<!-- ========================= -->
-		<div class="relative bg-purple-700 pt-12 pb-24">
+		<div class="relative bg-purple-700 lg:pt-12 pb-24">
 
 			<!-- gray bar to spice up the section transition -->
 			<div class="absolute bottom-0 inset-x-0 h-64 bg-gray-300"></div>
 
 			<div class="relative container mx-auto px-6 lg:px-0">
-				<h2 class="mb-10 text-6xl font-bold text-purple-100">Writing CSS is tough stuff!</h2>
-				<div class="flex space-x-16">
+				<h2 class="mb-10 text-4xl lg:text-6xl font-bold text-purple-100">Writing CSS is tough stuff!</h2>
+				<div class="lg:flex lg:space-x-16 space-y-8 lg:space-y-0">
 					<!-- left col -->
-					<div class="w-2/3 bg-white p-16 rounded shadow-2xl text-gray-800 text-lg space-y-8 leading-relaxed">
+					<div class="lg:w-2/3 bg-white p-12 lg:p-16 rounded shadow-2xl text-gray-800 text-lg space-y-8 leading-relaxed">
 						<p>Tailwind makes writing CSS easier and lets us customize our designs faster than any other CSS framework. If you want a CSS framework that has pre-built components, then Tailwind may not be for you. If you want a CSS framework that lets you design quickly and customize your site, then <strong class="font-bold text-teal-500">Tailwind is gonna be a lot of fun</strong>.</p>
 						<p>After using Bulma to build <a href="https://scotch.io" class="text-blue-500 hover:underline">Scotch.io</a>, my CSS files became littered with my own <code class="inline-block px-1 rounded bg-gray-200 text-red-700 text-xs font-mono">!important</code> classes to override the framework's styles. Tailwind doesn't have the <code class="inline-block px-1 rounded bg-gray-200 text-red-700 text-xs font-mono">!important</code> problem since all our elements are designed on the fly.</p>
 						<p><strong class="font-bold">Important Note:</strong> Tailwind lets us design quickly, but this doesn't mean that you don't need CSS knowledge however. To use Tailwind, you need to have a good understanding of CSS properties. In this course, we will learn Tailwind and we'll also learn CSS conceptsto create good looking designs. <strong class="font-bold">Tailwind is the ultimate CSS shorthand</strong>, but we still need to learn the CSS, which we'll do in this course.</p>
