--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Beginner Tailwind</title>
 	</head>
 
 	<body>
@@ -117,6 +117,24 @@
 		<!-- ========================= -->
 		<!-- about section -->
 		<!-- ========================= -->
+		<div class="pt-12 pb-24 bg-gray-300 text-center">
+			<div class="container mx-auto px-6 lg:px-0">
+				<h2 class="mb-3">Some Tailwind videos I've done</h2>
+				<p class="mb-12">Hey there! My name is <a href="https://twitter.com/chrisoncode">Chris Sev</a> and I founded a web dev tutorial site Scotch.io. We were able to grow to 4M monthly pageviews and $300,000 yearly revenue. Scotch.io was acquired byDigitalOcean in November 2019. Nowadays I'm in search of the best ways to develop and design a business. Hope you enjoy this course and my other one MakeReactApps.com.</p>
+
+				<!-- videos -->
+				<div class="flex space-x-8">
+					<div class="w-1/2">
+						<p>I have a Getting started with Tailwind article on scotch.io and a 15 minute starter YouTube video.</p>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/trDl36m9pgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="w-1/2">
+						<p>I did a Build Your 1st Tailwind Site for Traversy Media on YouTube also.</p>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/Ec1cz_jHQM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- ========================= -->
 		<!-- what you'll learn section -->
