Add responsive styles to About section.

--- a/index.html
+++ b/index.html
@@ -117,20 +117,20 @@
 		<!-- ========================= -->
 		<!-- about section -->
 		<!-- ========================= -->
-		<div class="pt-12 pb-24 bg-gray-300 text-center">
+		<div class="lg:pt-12 pb-24 bg-gray-300 lg:text-center">
 			<div class="container mx-auto px-6 lg:px-0">
-				<h2 class="mb-3">Some Tailwind videos I've done</h2>
-				<p class="mb-12">Hey there! My name is <a href="https://twitter.com/chrisoncode">Chris Sev</a> and I founded a web dev tutorial site Scotch.io. We were able to grow to 4M monthly pageviews and $300,000 yearly revenue. Scotch.io was acquired byDigitalOcean in November 2019. Nowadays I'm in search of the best ways to develop and design a business. Hope you enjoy this course and my other one MakeReactApps.com.</p>
+				<h2 class="mb-3 text-3xl lg:text-6xl font-bold text-teal-900">Some Tailwind Videos I've Done</h2>
+				<p class="mb-20 lg:text-xl leading-loose">Hey there! My name is <a href="https://twitter.com/chrisoncode" class="text-blue-500 hover:underline">Chris Sev</a> and I founded a web dev tutorial site Scotch.io. We were able to grow to 4M monthly pageviews and $300,000 yearly revenue. Scotch.io was acquired byDigitalOcean in November 2019. Nowadays I'm in search of the best ways to develop and design a business. Hope you enjoy this course and my other one MakeReactApps.com.</p>
 
 				<!-- videos -->
-				<div class="flex space-x-8">
-					<div class="w-1/2">
-						<p>I have a Getting started with Tailwind article on scotch.io and a 15 minute starter YouTube video.</p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/trDl36m9pgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="lg:flex lg:space-x-8 space-y-8 lg:space-y-0 text-left">
+					<div class="lg:w-1/2 bg-white border-2 border-gray-700 rounded shadow-xl">
+						<p class="text-lg p-4 text-gray-600">I have a Getting started with Tailwind article on scotch.io and a 15 minute starter YouTube video.</p>
+						<iframe class="w-full rounded-b" height="315" src="https://www.youtube.com/embed/trDl36m9pgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-					<div class="w-1/2">
-						<p>I did a Build Your 1st Tailwind Site for Traversy Media on YouTube also.</p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/Ec1cz_jHQM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="lg:w-1/2 bg-white border-2 border-gray-700 rounded shadow-xl">
+						<p class="text-lg p-4 text-gray-600">I did a Build Your 1st Tailwind Site for Traversy Media on YouTube also.</p>
+						<iframe class="w-full rounded-b" height="315" src="https://www.youtube.com/embed/Ec1cz_jHQM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
