Add markup and styles to Learn section.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!-- header/navigation section -->
 			<!-- ========================= -->
 			<div class="relative text-gray-600">
-				<div class="container mx-auto flex justify-between px-6 lg:px-0 py-6">				
+				<div class="container mx-auto flex justify-between px-6 lg:px-0 py-6">
 					<!-- left header section -->
 					<div class="flex items-center space-x-4">
 						<a href="#" class="font-bold text-2xl text-teal-900">Beginner Tailwind</a>
@@ -50,7 +50,6 @@
 			<!-- hero section -->
 			<!-- ========================= -->
 			<div class="relative">
-
 				<!-- purple bar to spice up the section transition -->
 				<div class="absolute bottom-0 inset-x-0 h-64 bg-purple-700"></div>
 
@@ -61,7 +60,6 @@
 						<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-500 via-purple-600 to-purple-500">Tailwind</span>
 					</h1>
 	
-	
 					<!-- paragraph -->
 					<p class="mb-8 text-lg lg:text-2xl text-gray-700">Make good looking designs quickly. All without a single line of custom CSS.</p>
 	
@@ -71,7 +69,6 @@
 					<div class="relative">
 						<!-- teaser image -->
 						<img src="https://i.imgur.com/wysbBMS.png" alt="Teaser image" class="rounded-lg shadow-2xl border-4 border-purple-400" />
-	
 						<!-- teaser image info box -->
 						<div class="lg:absolute top-0 right-0 bg-yellow-100 lg:transform lg:translate-x-4 lg:-translate-y-4 text-left py-4 px-8 rounded shadow-lg text-yellow-800 border-t-4 border-yellow-500">
 							<p><strong class="font-bold">We'll create BeginnerTailwind.com</strong> <span class="opacity-50">(it's the site you're on now)</span></p>
@@ -139,6 +136,35 @@
 		<!-- ========================= -->
 		<!-- what you'll learn section -->
 		<!-- ========================= -->
+		<div class="py-32 bg-gray-200 text-gray-700">
+			<div class="container mx-auto px-6 lg:px-0">
+				<!-- header -->
+				<h2 class="mb-32 text-6xl text-center font-bold text-purple-900">What You'll Learn In This Course</h2>
+				<!-- card grid -->
+				<div class="grid grid-cols-6 gap-10">
+					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
+						<h3 class="p-4 border-b border-gray-700 font-bold text-lg"></h3>How to use Tailwind classes</h3>
+						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
+					</div>
+					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
+						<h3 class="p-4 border-b border-gray-700 font-bold text-lg"></h3>How to use Tailwind classes</h3>
+						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
+					</div>
+					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
+						<h3 class="p-4 border-b border-gray-700 font-bold text-lg"></h3>How to use Tailwind classes</h3>
+						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
+					</div>
+					<div class="col-span-3 border border-gray-700 rounded shadow-lg">
+						<h3 class="p-4 border-b border-gray-700 font-bold text-lg"></h3>How to use Tailwind classes</h3>
+						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
+					</div>
+					<div class="col-span-3 border border-gray-700 rounded shadow-lg">
+						<h3 class="p-4 border-b border-gray-700 font-bold text-lg"></h3>How to use Tailwind classes</h3>
+						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- ========================= -->
 		<!-- what you'll build section -->
