Quickfix: remove extra H3 closing tag.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				<!-- card grid -->
 				<div class="grid grid-cols-6 gap-10">
 					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
-						<h3 class="p-4 border-b border-gray-700 font-bold text-lg"></h3>How to use Tailwind classes</h3>
+						<h3 class="p-4 border-b border-gray-700 font-bold text-lg">How to use Tailwind classes</h3>
 						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
 					</div>
 					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
