--- a/index.html
+++ b/index.html
@@ -139,27 +139,66 @@
 		<div class="py-32 bg-gray-200 text-gray-700">
 			<div class="container mx-auto px-6 lg:px-0">
 				<!-- header -->
-				<h2 class="mb-32 text-6xl text-center font-bold text-purple-900">What You'll Learn In This Course</h2>
+				<div class="relative">
+					<h2 class="mb-32 text-6xl text-center font-bold text-purple-900">What You'll Learn In This Course</h2>
+					<div class="absolute top-0 left-0 w-1/3 h-2 rounded bg-red-400 bg-gradient-to-r from-blue-400 to-purple-600 transform -translate-y-4"></div>
+					<div class="absolute bottom-0 right-0 w-1/3 h-2 rounded bg-green-400 bg-gradient-to-r from-purple-400 to-blue-600 transform translate-y-4"></div>
+				</div>
 				<!-- card grid -->
 				<div class="grid grid-cols-6 gap-10">
 					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
-						<h3 class="p-4 border-b border-gray-700 font-bold text-lg">How to use Tailwind classes</h3>
+						<div class="p-4 flex items-center justify-between border border-gray-700">
+							<h3 class="font-bold text-lg">How to use Tailwind classes</h3>
+							<div class="flex space-x-2">
+								<div class="w-3 h-3 rounded-full bg-red-500"></div>
+								<div class="w-3 h-3 rounded-full bg-yellow-500"></div>
+								<div class="w-3 h-3 rounded-full bg-green-500"></div>
+							</div>
+						</div>
 						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
 					</div>
 					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
-						<h3 class="p-4 border-b border-gray-700 font-bold text-lg">How to use Tailwind classes</h3>
+						<div class="p-4 flex items-center justify-between border border-gray-700">
+							<h3 class="font-bold text-lg">How to use Tailwind classes</h3>
+							<div class="flex space-x-2">
+								<div class="w-3 h-3 rounded-full bg-red-500"></div>
+								<div class="w-3 h-3 rounded-full bg-yellow-500"></div>
+								<div class="w-3 h-3 rounded-full bg-green-500"></div>
+							</div>
+						</div>
 						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
 					</div>
 					<div class="col-span-2 border border-gray-700 rounded shadow-lg">
-						<h3 class="p-4 border-b border-gray-700 font-bold text-lg">How to use Tailwind classes</h3>
+						<div class="p-4 flex items-center justify-between border border-gray-700">
+							<h3 class="font-bold text-lg">How to use Tailwind classes</h3>
+							<div class="flex space-x-2">
+								<div class="w-3 h-3 rounded-full bg-red-500"></div>
+								<div class="w-3 h-3 rounded-full bg-yellow-500"></div>
+								<div class="w-3 h-3 rounded-full bg-green-500"></div>
+							</div>
+						</div>
 						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
 					</div>
 					<div class="col-span-3 border border-gray-700 rounded shadow-lg">
-						<h3 class="p-4 border-b border-gray-700 font-bold text-lg">How to use Tailwind classes</h3>
+						<div class="p-4 flex items-center justify-between border border-gray-700">
+							<h3 class="font-bold text-lg">How to use Tailwind classes</h3>
+							<div class="flex space-x-2">
+								<div class="w-3 h-3 rounded-full bg-red-500"></div>
+								<div class="w-3 h-3 rounded-full bg-yellow-500"></div>
+								<div class="w-3 h-3 rounded-full bg-green-500"></div>
+							</div>
+						</div>
 						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
 					</div>
 					<div class="col-span-3 border border-gray-700 rounded shadow-lg">
-						<h3 class="p-4 border-b border-gray-700 font-bold text-lg">How to use Tailwind classes</h3>
+						<div class="p-4 flex items-center justify-between border border-gray-700">
+							<h3 class="font-bold text-lg">How to use Tailwind classes</h3>
+							<div class="flex space-x-2">
+								<div class="w-3 h-3 rounded-full bg-red-500"></div>
+								<div class="w-3 h-3 rounded-full bg-yellow-500"></div>
+								<div class="w-3 h-3 rounded-full bg-green-500"></div>
+							</div>
+						</div>
 						<p class="p-4">We'll dive into the most important Tailwind classes and use them a TON. There are a lot of useful classes like spacing, backgrounds, borders, shadows, and typography. We'll type the Tailwind classes many times over to ensure that repeitition is our greatest learning tool.</p>
 					</div>
 				</div>
