Add layout, styles, responsive styles to Build section.

--- a/index.html
+++ b/index.html
@@ -241,6 +241,33 @@
 		<!-- ========================= -->
 		<!-- what you'll build section -->
 		<!-- ========================= -->
+		<div class="py-24 bg-gray-300 text-gray-600">
+			<div class="container mx-auto px-6 lg:px-0">
+				<div class="mb-8 text-center">
+					<h2 class="mb-2 text-5xl text-gray-800">What we'll build in this course</h2>
+					<p class="text-lg text-gray-700">These components are things you'll have to create in every project.</p>
+				</div>
+
+				<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5">
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-red-500 rounded-l">😍</div>
+						<div class="p-4">Buttons</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-green-500 rounded-l">😍</div>
+						<div class="p-4">Cards</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-purple-500 rounded-l">😍</div>
+						<div class="p-4">Footer</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-blue-500 rounded-l">😍</div>
+						<div class="p-4">Header</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- ========================= -->
 		<!-- faq section -->
