--- a/index.html
+++ b/index.html
@@ -265,6 +265,66 @@
 						<div class="w-1/5 flex items-center justify-center text-3xl bg-blue-500 rounded-l">😍</div>
 						<div class="p-4">Header</div>
 					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-red-500 rounded-l">😍</div>
+						<div class="p-4">Buttons</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-green-500 rounded-l">😍</div>
+						<div class="p-4">Cards</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-purple-500 rounded-l">😍</div>
+						<div class="p-4">Footer</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-blue-500 rounded-l">😍</div>
+						<div class="p-4">Header</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-red-500 rounded-l">😍</div>
+						<div class="p-4">Buttons</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-green-500 rounded-l">😍</div>
+						<div class="p-4">Cards</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-purple-500 rounded-l">😍</div>
+						<div class="p-4">Footer</div>
+					</div>
+					<div class="flex bg-white rounded shadow">
+						<div class="w-1/5 flex items-center justify-center text-3xl bg-blue-500 rounded-l">😍</div>
+						<div class="p-4">Header</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ========================= -->
+		<!-- pricing section -->
+		<!-- ========================= -->
+		<div class="py-32 bg-blue-600 text-blue-100">
+			<div class="container mx-auto px-6 lg:px-0 flex items-center space-x-8">
+				<!-- left box -->
+				<div class="w-1/3 text-right space-y-2 text-lg">
+					<p>75 videos at a smooth pace</p>
+					<p>9.25 hours of learning + building</p>
+					<p>Source code and CodePens</p>
+				</div>
+
+				<!-- pricing box -->
+				<div class="w-1/3 bg-white p-8 text-gray-800 rounded shadow-2xl border-8 border-purple-700">
+					<h4>Start Tailwind<span class="italic">-ing</span>!</h4>
+					<div><span>$</span>47</div>
+					<a href="#">Buy the Course</a>
+				</div>
+
+				<!-- right box -->
+				<div class="w-1/3 space-y-2 text-lg">
+					<p>Use the code in your projects</p>
+					<p>Access to Discord for support</p>
+					<p>Lifetime refund guarantee</p>
 				</div>
 			</div>
 		</div>
