--- a/index.html
+++ b/index.html
@@ -304,27 +304,27 @@
 		<!-- ========================= -->
 		<!-- pricing section -->
 		<!-- ========================= -->
-		<div class="py-32 bg-blue-600 text-blue-100">
-			<div class="container mx-auto px-6 lg:px-0 flex items-center space-x-8">
+	<div class="py-32 bg-blue-600 text-blue-200">
+			<div class="container mx-auto px-6 lg:px-0 flex items-center space-y-4">
 				<!-- left box -->
-				<div class="w-1/3 text-right space-y-2 text-lg">
-					<p>75 videos at a smooth pace</p>
-					<p>9.25 hours of learning + building</p>
-					<p>Source code and CodePens</p>
+				<div class="w-1/3 text-right space-y-2 text-xl">
+					<p><strong class="font-bold text-white">75 videos</strong> at a smooth pace</p>
+					<p><strong class="font-bold text-white">9.25 hours</strong> of learning + building</p>
+					<p><strong class="font-bold text-white">Source code</strong> and CodePens</p>
 				</div>
 
 				<!-- pricing box -->
-				<div class="w-1/3 bg-white p-8 text-gray-800 rounded shadow-2xl border-8 border-purple-700">
-					<h4>Start Tailwind<span class="italic">-ing</span>!</h4>
-					<div><span>$</span>47</div>
-					<a href="#">Buy the Course</a>
+				<div class="w-1/3 bg-white p-8 text-gray-800 rounded shadow-2xl border-8 border-purple-700 text-center space-y-8 transform hover:scale-105 transition duration-500">
+					<h4 class="text-gray-600 text-sm">Start Tailwind<span class="italic">-ing</span>!</h4>
+					<div class="text-6xl text-purple-800 font-bold"><span class="opacity-25">$</span>47</div>
+					<a href="#" class="block p-3 bg-gradient-to-br from-yellow-400 via-yellow-500 to-orange-400 text-yellow-800 hover:text-yellow-900 rounded shadow hover:shadow-2xl transition duration-300">Buy the Course</a>
 				</div>
 
 				<!-- right box -->
-				<div class="w-1/3 space-y-2 text-lg">
-					<p>Use the code in your projects</p>
-					<p>Access to Discord for support</p>
-					<p>Lifetime refund guarantee</p>
+				<div class="w-1/3 space-y-2 text-xl">
+					<p>Use the code in <strong class="font-bold text-white">your projects</strong></p>
+					<p>Access to <strong class="font-bold text-white">Discord</strong> for support</p>
+					<p><strong class="font-bold text-white">Lifetime</strong> refund guarantee</p>
 				</div>
 			</div>
 		</div>
