--- a/index.html
+++ b/index.html
@@ -304,24 +304,34 @@
 		<!-- ========================= -->
 		<!-- pricing section -->
 		<!-- ========================= -->
-	<div class="py-32 bg-blue-600 text-blue-200">
+	<div class="relative py-32 bg-blue-600 text-blue-200">
+			<!-- gray box for the top of the section -->
+			<div class="absolute top-0 inset-x-0 h-48 bg-gray-300"></div>
+
 			<div class="container mx-auto px-6 lg:px-0 flex items-center space-y-4">
 				<!-- left box -->
-				<div class="w-1/3 text-right space-y-2 text-xl">
+				<div class="w-1/3 pt-12 text-right space-y-2 text-xl">
 					<p><strong class="font-bold text-white">75 videos</strong> at a smooth pace</p>
 					<p><strong class="font-bold text-white">9.25 hours</strong> of learning + building</p>
 					<p><strong class="font-bold text-white">Source code</strong> and CodePens</p>
 				</div>
 
 				<!-- pricing box -->
-				<div class="w-1/3 bg-white p-8 text-gray-800 rounded shadow-2xl border-8 border-purple-700 text-center space-y-8 transform hover:scale-105 transition duration-500">
+				<div class="relative w-1/3 bg-white p-8 text-gray-800 rounded shadow-2xl border-8 border-purple-700 text-center space-y-8 transform hover:scale-105 transition duration-500">
+					<!-- fancy beam elemetns -->
+					<div class="absolute top-0 inset-x-0 transform -translate-y-full flex items-end justify-center space-x-8">
+						<div class="w-2 h-16 mb-8 bg-red-500 rounded transform -rotate-45 origin-bottom"></div>
+						<div class="w-2 h-24 mb-8 bg-yellow-500 rounded"></div>
+						<div class="w-2 h-16 mb-8 bg-green-500 rounded transform rotate-45 origin-bottom"></div>
+					</div>
+
 					<h4 class="text-gray-600 text-sm">Start Tailwind<span class="italic">-ing</span>!</h4>
 					<div class="text-6xl text-purple-800 font-bold"><span class="opacity-25">$</span>47</div>
 					<a href="#" class="block p-3 bg-gradient-to-br from-yellow-400 via-yellow-500 to-orange-400 text-yellow-800 hover:text-yellow-900 rounded shadow hover:shadow-2xl transition duration-300">Buy the Course</a>
 				</div>
 
 				<!-- right box -->
-				<div class="w-1/3 space-y-2 text-xl">
+				<div class="w-1/3 pt-12 space-y-2 text-xl">
 					<p>Use the code in <strong class="font-bold text-white">your projects</strong></p>
 					<p>Access to <strong class="font-bold text-white">Discord</strong> for support</p>
 					<p><strong class="font-bold text-white">Lifetime</strong> refund guarantee</p>
