Add responsive styles to Pricing section.

--- a/index.html
+++ b/index.html
@@ -308,16 +308,16 @@
 			<!-- gray box for the top of the section -->
 			<div class="absolute top-0 inset-x-0 h-48 bg-gray-300"></div>
 
-			<div class="container mx-auto px-6 lg:px-0 flex items-center space-y-4">
+			<div class="container mx-auto px-6 lg:px-0 flex flex-col lg:flex-row items-center lg:space-x-8 space-y-4 lg:space-y-0">
 				<!-- left box -->
-				<div class="w-1/3 pt-12 text-right space-y-2 text-xl">
+				<div class="order-2 lg:order-1 lg:w-1/3 pt-12 text-center lg:text-right space-y-2 text-xl">
 					<p><strong class="font-bold text-white">75 videos</strong> at a smooth pace</p>
 					<p><strong class="font-bold text-white">9.25 hours</strong> of learning + building</p>
 					<p><strong class="font-bold text-white">Source code</strong> and CodePens</p>
 				</div>
 
 				<!-- pricing box -->
-				<div class="relative w-1/3 bg-white p-8 text-gray-800 rounded shadow-2xl border-8 border-purple-700 text-center space-y-8 transform hover:scale-105 transition duration-500">
+				<div class="order-1 lg:order-2 relative w-full lg:w-1/3 bg-white p-8 text-gray-800 rounded shadow-2xl border-8 border-purple-700 text-center space-y-8 transform hover:scale-105 transition duration-500">
 					<!-- fancy beam elemetns -->
 					<div class="absolute top-0 inset-x-0 transform -translate-y-full flex items-end justify-center space-x-8">
 						<div class="w-2 h-16 mb-8 bg-red-500 rounded transform -rotate-45 origin-bottom"></div>
@@ -331,7 +331,7 @@
 				</div>
 
 				<!-- right box -->
-				<div class="w-1/3 pt-12 space-y-2 text-xl">
+				<div class="order-3 lg:w-1/3 pt-12 space-y-2 text-center lg:text-left text-xl">
 					<p>Use the code in <strong class="font-bold text-white">your projects</strong></p>
 					<p>Access to <strong class="font-bold text-white">Discord</strong> for support</p>
 					<p><strong class="font-bold text-white">Lifetime</strong> refund guarantee</p>
