Add FAQ section.

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 		<!-- ========================= -->
 		<!-- pricing section -->
 		<!-- ========================= -->
-	<div class="relative py-32 bg-blue-600 text-blue-200">
+		<div class="relative py-32 bg-blue-600 text-blue-200">
 			<!-- gray box for the top of the section -->
 			<div class="absolute top-0 inset-x-0 h-48 bg-gray-300"></div>
 
@@ -342,6 +342,49 @@
 		<!-- ========================= -->
 		<!-- faq section -->
 		<!-- ========================= -->
+		<div class="py-32 bg-gray-800 text-gray-400">
+			<div class="container mx-auto px-6 lg:px-0">
+				<h2 class="mb-12 text-3xl text-center font-bold">Frequently Asked Questions</h2>
+				<!-- grid of questions -->
+				<div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+					<!-- question -->
+					<div class="p-8 border-2 border-gray-500 rounded-lg">
+						<h3 class="mb-3 text-gray-200 font-bold text-xl">Is there course support?</h3>
+						<p>You can email me directly at any time and we also have a <a href="#" class="text-blue-400 hover:underline">Discord community</a> where you gain exclusive channel access.</p>
+					</div>
+
+					<!-- question -->
+					<div class="p-8 border-2 border-gray-500 rounded-lg">
+						<h3 class="mb-3 text-gray-200 font-bold text-xl">Is there course support?</h3>
+						<p>You can email me directly at any time and we also have a <a href="#" class="text-blue-400 hover:underline">Discord community</a> where you gain exclusive channel access.</p>
+					</div>
+
+					<!-- question -->
+					<div class="p-8 border-2 border-gray-500 rounded-lg">
+						<h3 class="mb-3 text-gray-200 font-bold text-xl">Is there course support?</h3>
+						<p>You can email me directly at any time and we also have a <a href="#" class="text-blue-400 hover:underline">Discord community</a> where you gain exclusive channel access.</p>
+					</div>
+
+					<!-- question -->
+					<div class="p-8 border-2 border-gray-500 rounded-lg">
+						<h3 class="mb-3 text-gray-200 font-bold text-xl">Is there course support?</h3>
+						<p>You can email me directly at any time and we also have a <a href="#" class="text-blue-400 hover:underline">Discord community</a> where you gain exclusive channel access.</p>
+					</div>
+
+					<!-- question -->
+					<div class="p-8 border-2 border-gray-500 rounded-lg">
+						<h3 class="mb-3 text-gray-200 font-bold text-xl">Is there course support?</h3>
+						<p>You can email me directly at any time and we also have a <a href="#" class="text-blue-400 hover:underline">Discord community</a> where you gain exclusive channel access.</p>
+					</div>
+
+					<!-- question -->
+					<div class="p-8 border-2 border-gray-500 rounded-lg">
+						<h3 class="mb-3 text-gray-200 font-bold text-xl">Is there course support?</h3>
+						<p>You can email me directly at any time and we also have a <a href="#" class="text-blue-400 hover:underline">Discord community</a> where you gain exclusive channel access.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- ========================= -->
 		<!-- footer/newsletter section -->
