Add markup and styling to Footer section.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<!-- header + hero bg wrapper -->
-		<div class="bg-gradient-to-br from-white to-gray-300">
+		<div class="bg-gradient-to-br from-gray-100 to-gray-300">
 
 			<!-- left circle decoration -->
 			<div class="absolute top-0 left-0 transform translate-x-4 -translate-y-4">
@@ -389,6 +389,57 @@
 		<!-- ========================= -->
 		<!-- footer/newsletter section -->
 		<!-- ========================= -->
+		<div class="py-24 bg-gradient-to-br from-gray-100 to-gray-300 text-gray-600">
+			<div class="container mx-auto px-6 lg:px-0">
+				<!-- top footer -->
+				<div class="flex justify-between">
+					<!-- newsletter -->
+					<div class="flex flex-col justify-center">
+						<h4 class="mb-4 font-bold text-5xl text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-purple-500">Get updates on this course!</h4>
+						<form action="" method="POST" class="flex">
+							<input type="email" name="email" placeholder="super@secret.com" class="w-full p-3 rounded-l outline-none border-2 border-r-0 border-gray-400 focus:border-purple-400 placeholder-gray-300">
+							<button class="p-3 bg-purple-400 text-purple-100 rounded-r">Submit</button>
+						</form>
+					</div>
+					<!-- links -->
+					<div class="text-right flex space-x-10">
+						<div class="space-y-2">
+							<p class="mb-3 font-bold text-gray-400 uppercase tracking-widest">Company</p>
+							<a href="" class="block hover:text-gray-900 hover:underline">About</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Blog</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Careers</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Events</a>
+						</div>
+						<div class="space-y-2">
+							<p class="mb-3 font-bold text-gray-400 uppercase tracking-widest">Company</p>
+							<a href="" class="block hover:text-gray-900 hover:underline">About</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Blog</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Careers</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Events</a>
+						</div>
+						<div class="space-y-2">
+							<p class="mb-3 font-bold text-gray-400 uppercase tracking-widest">Company</p>
+							<a href="" class="block hover:text-gray-900 hover:underline">About</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Blog</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Careers</a>
+							<a href="" class="block hover:text-gray-900 hover:underline">Events</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- bottom footer -->
+				<div class="pt-4 mt-16 flex justify-between border-t border-gray-200 text-sm">
+					<!-- copyright -->
+					<div>Copyright &copy; 2021 - 3755</div>
+					<!-- links -->
+					<div class="space-x-4">
+						<a href="#">Discord</a>
+						<a href="#">Twitter</a>
+						<a href="#">YouTube</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<script type="module" src="/main.js"></script>
 	</body>
