Add fun elements to Footer section.

--- a/index.html
+++ b/index.html
@@ -389,8 +389,15 @@
 		<!-- ========================= -->
 		<!-- footer/newsletter section -->
 		<!-- ========================= -->
-		<div class="py-24 bg-gradient-to-br from-gray-100 to-gray-300 text-gray-600">
-			<div class="container mx-auto px-6 lg:px-0">
+		<div class="relative py-24 bg-gradient-to-br from-gray-100 to-gray-300 text-gray-600">
+			<!-- circles -->
+			<div class="absolute top-0 left-0 transform translate-y-6 translate-x-6">
+				<div class="absolute w-24 h-24 rounded-full bg-gradient-to-br from-teal-100 to-teal-200 opacity-50"></div>
+				<div class="absolute ml-12 w-24 h-24 rounded-full bg-gradient-to-br from-purple-100 to-purple-200 opacity-50"></div>
+				<div class="absolute mt-12 ml-6 w-24 h-24 rounded-full bg-gradient-to-br from-red-100 to-red-200 opacity-50"></div>
+			</div>
+
+			<div class="relative container mx-auto px-6 lg:px-0">
 				<!-- top footer -->
 				<div class="flex justify-between">
 					<!-- newsletter -->
